# radioBOX

./: .gitignore  Cargo.toml  README.md
src/: config.rs  gui.rs  main.rs  player.rs  stream.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  main.rs  player.rs  stream.rs
src-tauri/ui/: app.js  index.html  style.css
