[package]
name = "radioBOX"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eframe = { version = "0.31.1", features = ["default"] }
egui = "0.31.1"