[package]
name = "radiobox"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri       = { version = "2", features = ["tray-icon", "image-png"] }
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
